--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,8 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
