--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,18 +1,31 @@
 #Thu Jul 05 18:15:20 ICT 2018
 excludes=
 file.reference.commons-codec-1.10.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar-2=D:\\poi-3.17\\lib\\commons-codec-1.10.jar
 file.reference.commons-collections4-4.1.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-2=D:\\poi-3.17\\lib\\commons-collections4-4.1.jar
 file.reference.commons-logging-1.2.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-2=D:\\poi-3.17\\lib\\commons-logging-1.2.jar
 file.reference.curvesapi-1.04.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
+file.reference.curvesapi-1.04.jar-2=D:\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
 file.reference.junit-4.12.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\junit-4.12.jar
+file.reference.junit-4.12.jar-2=D:\\poi-3.17\\lib\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-2=D:\\poi-3.17\\lib\\log4j-1.2.17.jar
 file.reference.poi-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-3.17.jar
+file.reference.poi-3.17.jar-2=D:\\poi-3.17\\poi-3.17.jar
 file.reference.poi-examples-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-examples-3.17.jar
+file.reference.poi-examples-3.17.jar-2=D:\\poi-3.17\\poi-examples-3.17.jar
 file.reference.poi-excelant-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-excelant-3.17.jar
+file.reference.poi-excelant-3.17.jar-2=D:\\poi-3.17\\poi-excelant-3.17.jar
 file.reference.poi-ooxml-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-2=D:\\poi-3.17\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-2=D:\\poi-3.17\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-scratchpad-3.17.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-scratchpad-3.17.jar
+file.reference.poi-scratchpad-3.17.jar-2=D:\\poi-3.17\\poi-scratchpad-3.17.jar
 file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-2=D:\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
@@ -102,7 +115,20 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.17.jar-1}:\
     ${file.reference.poi-ooxml-3.17.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
-    ${file.reference.poi-scratchpad-3.17.jar-1}
+    ${file.reference.poi-scratchpad-3.17.jar-1}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.poi-examples-3.17.jar-2}:\
+    ${file.reference.poi-excelant-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
+    ${file.reference.poi-scratchpad-3.17.jar-2}:\
+    ${file.reference.commons-codec-1.10.jar-2}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar-2}:\
+    ${file.reference.junit-4.12.jar-2}:\
+    ${file.reference.log4j-1.2.17.jar-2}:\
+    ${file.reference.curvesapi-1.04.jar-2}:\
+    ${file.reference.xmlbeans-2.6.0.jar-2}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
