--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,20 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-codec-1.10.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-logging-1.2.jar
+file.reference.curvesapi-1.04.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
+file.reference.curvesapi-1.04.jar-2=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
+file.reference.junit-4.12.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-2=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\log4j-1.2.17.jar
+file.reference.poi-examples-3.17.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar-2=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-2=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-ooxml-3.17.jar
+file.reference.poi-scratchpad-3.17.jar=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-scratchpad-3.17.jar
+file.reference.xmlbeans-2.6.0.jar-2=C:\\Users\\feby\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Nously\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\feby\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
